--- a/style.css
+++ b/style.css
@@ -89,6 +89,11 @@ nav {
   color: white;
   text-shadow: -1px 0px 24px var(--dark_color);
 }
+.agence {
+  text-align: center;
+  letter-spacing: 1px;
+  color: white;
+}
 
 .spanY {
   color: #5CF291;
@@ -110,6 +115,7 @@ nav .ulheader {
 .liheader:hover {
   color: var(--white_color);
 }
+
 
 /* =============
 //   WHAT WE DO  //
@@ -541,23 +547,65 @@ transform: rotate(5deg);
   }
   
   /*-----HEADER NAV-----*/
-  nav {
-    position: static;
-  }
+
 
   nav .ulheader {
     flex-direction: column;
-    align-items: center;
+    font-size: 1rem;
+    /*position: fixed;
+    top: 0;*/
+    
   }
+
+
   .liheader{
     padding: 8px;
   }
   .titreh1 {
     font-size: 3rem;
   }
+  .agence {
+    text-align: center;
+    color: white;
+    font-style: italic;
+    letter-spacing: 1px;
+  }
   .spanY {
     font-size: 6rem;
   }
+  /*.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 3px;*/
+
+  }
+  .ulheader {
+    align-items: center;
+    position: static;
+    left: 0px;
+    background-color: var(--corail_color);
+    justify-content: center;
+   /* height: 35vh;
+    top: 7vh;
+    width: 20%;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in;*/
+  }
+  /*.burger {
+    cursor: pointer;
+    right: 50px;
+  }
+  .nav-active {
+    transform: translateX(0%);
+  }*/
+
+
+
+
+
+
+
 
   /*-----WHAT WE DO-----*/
   .wwd-container{
