--- a/style.css
+++ b/style.css
@@ -378,10 +378,6 @@ form label {
 .testimonialBox {
   width: 100%;
   height: 250 px;
-  animation-name: slideIn;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
 }
 
 
@@ -455,10 +451,15 @@ form label {
 .team {
   margin:.4vw;
   padding: 5vw;
+  border-radius: 40%;
+  background-color: transparent;
+  -webkit-transition: background 1s, border-radius 0.5s;
+  transition: background 1s, border-radius 0.5s;
 }
 
 .team p img{
   padding-right: .5rem;
+  opacity: 0%;
 }
 
 .team .meetLinkedin {
@@ -474,8 +475,8 @@ form label {
 }
 
 .team:hover{
-  background: var(--corail_color) no-repeat;
   border-radius: 50%;
+  background-color: var(--corail_color);
 }
 
 .team:hover .meetLinkedin {
