first try adjusting hover

--- a/style.css
+++ b/style.css
@@ -124,10 +124,10 @@ nav .ulheader {
   transition: 0.7s;
 }
 
-.wwd-container:hover > .wwd-item{
+/*.wwd-container:hover > .wwd-item{
   opacity: 0.6;
   transform: scale(0.9);
-}
+}*/
 
 .wwd-item{
   display: flex;
@@ -138,6 +138,11 @@ nav .ulheader {
   text-align: center;
   align-items: center;
   transition: 0.5s;
+}
+
+.wwd-item:hover > .wwd-item {
+  opacity: 0.6;
+  transform: scale(0.9);
 }
 
 .wwd-container:hover > .wwd-item:hover{
