meet our team: <p> transition, border-radius no longer transtion

--- a/style.css
+++ b/style.css
@@ -460,10 +460,11 @@ form label {
 .team {
   margin:.4vw;
   padding: 5vw;
-  border-radius: 40%;
+  /*border-radius: 40%;*/
+  border-radius: 50%;
   background-color: transparent;
-  -webkit-transition: background 1s, border-radius 0.5s;
-  transition: background 1s, border-radius 0.5s;
+  -webkit-transition: background 0.5s/*, border-radius 0.5s*/;
+  transition: background 0.5s/*, border-radius 0.5s*/;
 }
 
 .team p img{
@@ -474,22 +475,23 @@ form label {
 .team .meetLinkedin {
   text-align: center;
   color: var(--dark_color);
-  visibility: hidden;
+  opacity: 0%;
 }
 
 .meetLinkedin {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  transition: opacity 0.5s;
 }
 
 .team:hover{
-  border-radius: 50%;
+  /*border-radius: 50%;*/
   background-color: var(--corail_color);
 }
 
 .team:hover .meetLinkedin {
-  visibility: visible;
+  opacity: 100%;
 }
 
 /* =============
