--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 :root{
-  --darkgreen_color: #3FA663;
+  --darkgreen_color: rgb(63, 166, 99);
   --lightgreen_color: rgb(92, 242, 145);
   --white_color: #ffffff;
   --corail_color: #f08080;
@@ -245,29 +245,94 @@ nav .ulheader {
 #some-projects .carousel-container {
   width: 90vw;
   margin: auto;
+  padding-bottom: 35%;
   overflow: hidden;
-  /*border: 5px solid black;*/
   position: relative;
 }
 
 #some-projects .carousel-container .carousel-slide {
-  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 500px;
+  height: 100%;
+  list-style-type: none;
 }
 
-#some-projects .carousel-container .carousel-slide img {
-  /*object-fit: cover;*/
+#some-projects .carousel-container .carousel-slide .slide-item {
+  position: absolute;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
   width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  opacity: 0;
+
+  -webkit-transition: opacity 1s;
+  -moz-transition: opacity 1s;
+  -o-transition: opacity 1s;
+  transition: opacity 1s;
+}
+
+#some-projects .carousel-container .carousel-slide .showing {
+  opacity: 1;
+  z-index: 2;
+}
+
+#some-projects .carousel-container .carousel-slide #seeMore {
+  position: absolute;
+  bottom: 3%;
+  right: 45%;
+  cursor: pointer;
+  padding: 10.5px;
+  font-size: 1rem;
+  border-radius: 4px;
+  color: var(--white_color);
+  background-color:rgba(63, 166, 99, .6);
+  border: none;
+  font-weight: bold;
+  transition: .5s;
+}
+
+#some-projects .carousel-container .carousel-slide #seeMore:hover {
+  background-color: var(--corail_color);
+  color: var(--darkdarkgreen);
+}
+
+.slide-item:nth-of-type(1) {
+  background-image: url('./Images/WildCircus1.jpg');
+}
+
+.slide-item:nth-of-type(2) {
+  background-image: url('./Images/WildCircus2.jpg');
+}
+
+.slide-item:nth-of-type(3) {
+  background-image: url('./Images/WildCircus3.jpg');
+}
+
+.slide-item:nth-of-type(4) {
+  background-image: url('./Images/WildCircus4.jpg');
+}
+
+.slide-item:nth-of-type(5) {
+  background-image: url('./Images/WildCircus5.jpg');
+}
+
+.slide-item:nth-of-type(6) {
+  background-image: url('./Images/WildCircus6.jpg');
 }
 
 #some-projects .carousel-container #prevBtn, #nextBtn {
   cursor: pointer;
   color:var(--darkdarkgreen);
   font-weight: bold;
-  font-size: 3rem;
+  font-size: 7vh;
   position: absolute;
-  z-index: 1;
+  z-index: 6;
   user-select: none;
 }
 
@@ -285,10 +350,6 @@ nav .ulheader {
   color: var(--corail_color);
 }
 
-/* Pour les liens à retravailler après */
-#some-projects article {
-  display: none;
-}
 
 
 /* =============
@@ -373,6 +434,7 @@ form label {
   text-align: center;
   margin: 1vw;
 }
+
 /* =============
 //   THEY TRUST US    //
 ================ */
@@ -616,6 +678,10 @@ transform: rotate(5deg);
 
 
   /*-----OUR PROJECTS-----*/ 
+
+  #some-projects {
+    display: none;
+  }
 
 
   /*-----FORM-----*/
