--- a/style.css
+++ b/style.css
@@ -490,7 +490,7 @@ form label {
 }
 
 
-/* When add class show display the say element */
+/* When add show display the say element */
 
 
 .wrapper .testi .client .profile {
