--- a/style.css
+++ b/style.css
@@ -481,8 +481,9 @@ form label {
   margin: 60px 0;
   line-height: 1.4;
   margin-bottom: 5px;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
   transform: translateY(-200px);
+  transition: all 1s cubic-bezier(1, 0.1, 0, 1.04);
 }
 
 .say mark{
@@ -796,16 +797,6 @@ button#btn {
     justify-content: flex-start;
   }
  
-  .say{
-    transform: translateY(0);
-  }
-
-  .wrapper .testi .client .profile .img {
-  visibility: hidden;
-  }
-  .wrapper .testi .client .profile:hover {
-    background:none;
-  }
   
   /*-----MEET OUR TEAL-----*/
  .avatarteam {
