--- a/style.css
+++ b/style.css
@@ -895,8 +895,12 @@ button.btn {
     height: 40vh;
     background-color: var(--corail_color);
     margin-bottom: 0px;
-    border-radius: 0 60px 60px 0;
+    border-radius: 0 45px 45px 0;
     width: 100%;
+  }
+  
+  .ulheader li {
+    font-size: 0.9rem;
   }
 
   /*.liproject {
